syntax = "proto3";

service TopRatedService {
  rpc GetTopRatedMovies (TopRatedRequest) returns (TopRatedResponse) {}
}

message TopRatedRequest {}

message TopRatedResponse {
  repeated Movie movie = 1;
}

message Movie {
  string movieId = 1;
  string name= 2;
  string description = 3;
}